chore: update translations

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1,3 +1,47 @@
 {
-  "hello": "hello i18n !!"
+  "error": {
+    "ERROR_OCCURRED": "Error occurred",
+    "BAD_REQUEST": "Bad request",
+    "UNAUTHORIZED": "Unauthorized",
+    "FORBIDDEN": "Forbidden",
+    "NOT_FOUND": "Not found",
+    "METHOD_NOT_ALLOWED": "Method not allowed",
+    "NOT_ACCEPTABLE": "Not acceptable",
+    "PROXY_AUTHENTICATION_REQUIRED": "Proxy authentication required",
+    "REQUEST_TIMEOUT": "Request timeout",
+    "CONFLICT": "Conflict",
+    "GONE": "Gone",
+    "LENGTH_REQUIRED": "Length required",
+    "PRECONDITION_FAILED": "Precondition failed",
+    "PAYLOAD_TOO_LARGE": "Payload too large",
+    "URI_TOO_LONG": "URI too long",
+    "UNSUPPORTED_MEDIA_TYPE": "Unsupported media type",
+    "RANGE_NOT_SATISFIABLE": "Range not satisfiable",
+    "EXPECTATION_FAILED": "Expectation failed",
+    "MISDIRECTED_REQUEST": "Misdirected request",
+    "UNPROCESSABLE_ENTITY": "Unprocessable entity",
+    "LOCKED": "Locked",
+    "FAILED_DEPENDENCY": "Failed dependency",
+    "UPGRADE_REQUIRED": "Upgrade required",
+    "PRECONDITION_REQUIRED": "Precondition required",
+    "TOO_MANY_REQUESTS": "Too many requests",
+    "REQUEST_HEADER_FIELDS_TOO_LARGE": "Request header fields too large",
+    "UNAVAILABLE_FOR_LEGAL_REASONS": "Unavailable for legal reasons",
+    "INTERNAL_SERVER_ERROR": "Internal server error",
+    "NOT_IMPLEMENTED": "Not implemented",
+    "BAD_GATEWAY": "Bad gateway",
+    "SERVICE_UNAVAILABLE": "Service unavailable",
+    "GATEWAY_TIMEOUT": "Gateway timeout",
+    "HTTP_VERSION_NOT_SUPPORTED": "HTTP version not supported",
+    "VARIANT_ALSO_NEGOTIATES": "Variant also negotiates",
+    "INSUFFICIENT_STORAGE": "Insufficient storage",
+    "LOOP_DETECTED": "Loop detected",
+    "NOT_EXTENDED": "Not extended",
+    "NETWORK_AUTHENTICATION_REQUIRED": "Network authentication required",
+    "CONNRESET": "Connection reset",
+    "NO_RESPONSE": "No response",
+    "REQUEST_ERROR": "Request error",
+    "REQUEST_CANCELLED": "Request cancelled",
+    "TOKEN_OUTDATED": "Token outdated"
+  }
 }
