--- a/src/i18n/locales/zh-Hans.json
+++ b/src/i18n/locales/zh-Hans.json
@@ -1,3 +1,47 @@
 {
-  "hello": "你好 i18n !!"
+  "error": {
+    "ERROR_OCCURRED": "发生了错误",
+    "BAD_REQUEST": "请求语法错误",
+    "UNAUTHORIZED": "未认证",
+    "FORBIDDEN": "拒绝访问",
+    "NOT_FOUND": "请求的资源未被找到",
+    "METHOD_NOT_ALLOWED": "请求方法被禁止",
+    "NOT_ACCEPTABLE": "请求没有被接受",
+    "PROXY_AUTHENTICATION_REQUIRED": "代理未认证",
+    "REQUEST_TIMEOUT": "请求超时",
+    "CONFLICT": "处理请求时发生冲突",
+    "GONE": "请求的资源已被移除",
+    "LENGTH_REQUIRED": "请求缺少 Content-Length",
+    "PRECONDITION_FAILED": "请求前置条件头错误",
+    "PAYLOAD_TOO_LARGE": "请求实体过大",
+    "URI_TOO_LONG": "请求 URI 过长",
+    "UNSUPPORTED_MEDIA_TYPE": "请求的媒体格式无效",
+    "RANGE_NOT_SATISFIABLE": "请求头部 Range 无效",
+    "EXPECTATION_FAILED": "请求头部 Expect 无效",
+    "MISDIRECTED_REQUEST": "请求的服务器无法响应",
+    "UNPROCESSABLE_ENTITY": "请求实体语义错误",
+    "LOCKED": "请求的资源被锁定",
+    "FAILED_DEPENDENCY": "请求失败",
+    "UPGRADE_REQUIRED": "请求协议需要升级",
+    "PRECONDITION_REQUIRED": "请求缺少前置条件头",
+    "TOO_MANY_REQUESTS": "请求过多",
+    "REQUEST_HEADER_FIELDS_TOO_LARGE": "请求头字段过大",
+    "UNAVAILABLE_FOR_LEGAL_REASONS": "因法律政策原因无法处理请求",
+    "INTERNAL_SERVER_ERROR": "服务器内部错误",
+    "NOT_IMPLEMENTED": "请求方法未支持",
+    "BAD_GATEWAY": "网关错误",
+    "SERVICE_UNAVAILABLE": "服务不可用",
+    "GATEWAY_TIMEOUT": "网关超时",
+    "HTTP_VERSION_NOT_SUPPORTED": "HTTP 协议版本无效",
+    "VARIANT_ALSO_NEGOTIATES": "服务器内部配置错误",
+    "INSUFFICIENT_STORAGE": "服务器空间不足",
+    "LOOP_DETECTED": "存在死循环",
+    "NOT_EXTENDED": "需要进一步扩展",
+    "NETWORK_AUTHENTICATION_REQUIRED": "网络未认证",
+    "CONNRESET": "连接超时",
+    "NO_RESPONSE": "服务器无响应",
+    "REQUEST_ERROR": "请求错误",
+    "REQUEST_CANCELLED": "请求已取消",
+    "TOKEN_OUTDATED": "登录状态已过期"
+  }
 }
