chore: update locales

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -43,5 +43,14 @@
     "REQUEST_ERROR": "Request error",
     "REQUEST_CANCELLED": "Request cancelled",
     "TOKEN_OUTDATED": "Token outdated"
+  },
+  "hint": {
+    "OK": "OK",
+    "confirm": "Confirm",
+    "cancel": "Cancel",
+    "reset": "Reset",
+    "back": "Back",
+    "home": "Home",
+    "index": "Index"
   }
 }
