fix: token 过期时自动处理

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -46,11 +46,13 @@
   },
   "hint": {
     "OK": "OK",
+    "ok": "ok",
     "confirm": "Confirm",
     "cancel": "Cancel",
     "reset": "Reset",
     "back": "Back",
     "home": "Home",
-    "index": "Index"
+    "index": "Index",
+    "reSignIn": "Re sign in please"
   }
 }
