--- a/src/i18n/locales/zh-Hans.json
+++ b/src/i18n/locales/zh-Hans.json
@@ -46,11 +46,13 @@
   },
   "hint": {
     "OK": "确定",
+    "ok": "确定",
     "confirm": "确定",
     "cancel": "取消",
     "reset": "重置",
     "back": "上一页",
     "home": "主页",
-    "index": "首页"
+    "index": "首页",
+    "reSignIn": "请重新登录"
   }
 }
